<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/paste_constraint"
    android:layout_height="match_parent"
    android:background="#FEFEE3"
    tools:context=".uploadImage.PasteLinkFragment">

    <ScrollView
        android:id="@+id/paste_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FEFEE3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".uploadImage.PasteLinkFragment">

        <LinearLayout
            android:id="@+id/paste_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FEFEE3"
            android:orientation="vertical">

            <EditText
                android:id="@+id/paste_link"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="250dp"
                android:layout_marginEnd="75dp"
                android:background="@drawable/transparent_rounded_corner"
                android:fontFamily="@font/raleway"
                android:hint="@string/http"
                android:padding="4dp"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="#2C6E49"
                android:textSize="16sp" />

            <Button
                android:id="@+id/paste_upload_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="75dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/raleway"
                android:gravity="center"
                android:text="@string/upload"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FEFEE3"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="75dp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/background_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="570dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/an_image_showing_documents"
        android:cropToPadding="false"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>